--- a/language/bg/email/admin_welcome_inactive.txt
+++ b/language/bg/email/admin_welcome_inactive.txt
@@ -7,6 +7,7 @@ Subject: Добре дошли в форумите на {SITENAME}
 ----------------------------
 Потребителско име: {USERNAME}
 
+Адрес на форума: {U_BOARD}
 ----------------------------
 
 Вашият акаунт в момента е неактивен, трябва да бъде одобрен от администратор. Когато това стане ще получите уведомително писмо.
