--- a/language/bg/email/coppa_welcome_inactive.txt
+++ b/language/bg/email/coppa_welcome_inactive.txt
@@ -16,6 +16,7 @@ Subject: Добре дошли в "{SITENAME}"
 Разрешение за участие в сайта {SITENAME} - {U_BOARD}
 
 Потребител: {USERNAME}
+E-mail: {EMAIL_ADDRESS}
 
 ПРЕГЛЕДАХ ИНФОРМАЦИЯТА, ДАДЕНА ОТ ДЕТЕТО МИ И ДАВАМ РАЗРЕШЕНИЕ НА {SITENAME} ДА ЗАПИШЕ ТАЗИ ИНФОРМАЦИЯ.
 РАЗБИРАМ, ЧЕ ТАЗИ ИНФОРМАЦИЯ МОЖЕ ДА БЪДЕ ПРОМЕНЯНА ПО ВСЯКО ВРЕМЕ С ПОМОЩТА НА ПАРОЛАТА.
@@ -39,4 +40,3 @@ Subject: Добре дошли в "{SITENAME}"
 Благодарим Ви, че се регистрирахте.
 
 {EMAIL_SIG}
-
