--- a/language/bg/email/topic_notify.txt
+++ b/language/bg/email/topic_notify.txt
@@ -10,6 +10,9 @@ Subject: Отговор в тема - "{TOPIC_TITLE}"
 Ако искате да прегледате цялата тема вижте връзката долу
 {U_TOPIC}
 
+Ако искате да прегледате форума вижте връзката долу
+{U_FORUM}
+
 Ако искате да премахнете абонамент посетете връзката долу
 
 {U_STOP_WATCHING_TOPIC}
