--- a/language/bg/email/coppa_resend_inactive.txt
+++ b/language/bg/email/coppa_resend_inactive.txt
@@ -15,8 +15,8 @@ Subject: Добре дошли в "{SITENAME}"
 ------------------------------ СРЕЖИ ТУК ------------------------------
 Разрешение за участие в сайта {SITENAME} - {U_BOARD}
 
-Потребителско име: {USERNAME}
-Парола: {PASSWORD}
+Потребител: {USERNAME}
+E-mail: {EMAIL_ADDRESS}
 
 ПРЕГЛЕДАХ ИНФОРМАЦИЯТА, ДАДЕНА ОТ ДЕТЕТО МИ И ДАВАМ РАЗРЕШЕНИЕ НА {SITENAME} ДА ЗАПИШЕ ТАЗИ ИНФОРМАЦИЯ.
 РАЗБИРАМ, ЧЕ ТАЗИ ИНФОРМАЦИЯ МОЖЕ ДА БЪДЕ ПРОМЕНЯНА ПО ВСЯКО ВРЕМЕ С ПОМОЩТА НА ПАРОЛАТА.
@@ -35,9 +35,8 @@ Subject: Добре дошли в "{SITENAME}"
 
 След като администраторите получат горния формуляр по факс или по пощата, акаунта Ви ще бъде активиран.
 
-Не забравяйте Вашата парола, защото тя е криптирана и ние не можем да Ви я пратим. Но в случай че я забравите, можете да поискате нова, която ще Ви бъде пратена по същия начин като тази.
+Моля не забравяйте Вашата парола, защото тя е криптирана и ние не можем да Ви я пратим. Но в случай че я забравите, можете да поискате нова, която ще Ви бъде пратена по същия начин като тази.
 
 Благодарим Ви, че се регистрирахте.
 
 {EMAIL_SIG}
-
