--- a/language/bg/email/forum_notify.txt
+++ b/language/bg/email/forum_notify.txt
@@ -6,6 +6,12 @@ Subject: Ново мнение - "{FORUM_NAME}"
 
 {U_NEWEST_POST}
 
+Ако искате да прегледате цялата тема вижте връзката долу
+{U_TOPIC}
+
+Ако искате да прегледате форума вижте връзката долу
+{U_FORUM}
+
 Ако искате да премахнете абонамент за форума, трябва да натиснете "Премахни абонамент" или на връзката долу
 
 {U_STOP_WATCHING_FORUM}
